--- a/snippets/header-mega-menu.liquid
+++ b/snippets/header-mega-menu.liquid
@@ -13,17 +13,52 @@
     }
 </style>
 
+
+
+
 <nav class="header__inline-menu">
     <ul class="list-menu list-menu--inline" role="list">
         {%- for link in section.settings.menu.links -%}
+            {% assign link_handle = link.title | handleize | downcase %}
             <li>
                 {%- if link.links != blank -%}
                     <header-menu>
                         <details id="Details-HeaderMenu-{{ forloop.index }}" class="mega-menu">
+                            {%- assign link_handle = link.title | handleize | downcase -%}
+                            {%- assign matched_block = nil -%}
+
+                            {%- for block in section.blocks -%}
+                                {%- if block.type == "customize-top-menu-item" and block.settings.mega_menu_trigger == link_handle -%}
+                                    {%- assign matched_block = block -%}
+                                    {%- break -%}
+                                {%- endif -%}
+                            {%- endfor -%}
+
+
                             <summary
                                     id="HeaderMenu-{{ link.handle }}"
-                                    class="header__menu-item list-menu__item link focus-inset"
-                            >
+                                    class="header__menu-item list-menu__item link focus-inset
+
+
+{% if matched_block.settings.enable_color_scheme and matched_block.settings.mega_menu_trigger == link_handle %}
+
+
+  {% case matched_block.settings.menu_apply_on %}
+   {% when 'desktop' %}
+          desktop-custom-style
+        {% when 'Mobile' %}
+          mobile-custom-style
+        {% when 'all' %}
+          universal-custom-style
+  {% endcase %}
+
+   {% if matched_block.settings.menu_style_on_desktop == 'outline' %}
+        outline-style
+      {% else %}
+        solid-style
+      {% endif %}
+{% endif %}
+">
                 <span
                   {%- if link.child_active %}
                       class="header__active-menu-item"
@@ -35,6 +70,16 @@
 
                                 {{- 'icon-caret.svg' | inline_asset_content -}}
                             </summary>
+
+                            {%- if matched_block and matched_block.settings.enable_color_scheme -%}
+                                <style>
+                                    #HeaderMenu-{{ link.handle }} {
+                                        color: {{ matched_block.settings.menu_item_color_scheme }};
+                                        background-color: {{ matched_block.settings.menu_item_background-color }};
+                                    }
+                                </style>
+                            {% endif %}
+
                             <div
                                     id="MegaMenu-Content-{{ forloop.index }}"
                                     class="mega-menu__content color-{{ section.settings.menu_color_scheme }} gradient motion-reduce global-settings-popup"
@@ -51,7 +96,7 @@
                                                 <a
                                                         id="HeaderMenu-{{ link.handle }}-{{ childlink.handle }}"
                                                         href="{{ childlink.url }}"
-                                                        class="mega-menu__link mega-menu__link--level-2 link{% if childlink.current %} mega-menu__link--active{% endif %}"
+                                                        class="mega-menu__link mega-menu__link--level-2 link{% if childlink.current %} mega-menu__link--active{% endif %} "
                                                         {% if childlink.current %}
                                                             aria-current="page"
                                                         {% endif %}
@@ -76,39 +121,88 @@
                                                             </li>
                                                         {%- endfor -%}
                                                     </ul>
-                                                {%- endif -%}
+                                                {% endif %}
                                             </li>
                                         {%- endfor -%}
                                     </ul>
                                     <div class="collection-list">
-
                                         {% render 'mega-menu-custom-content', link: link %}
                                     </div>
                                 </div>
-
-
                             </div>
-
-
                         </details>
                     </header-menu>
                 {%- else -%}
+
+                    {%- assign link_handle = link.title | handleize | downcase -%}
+                    {%- assign matched_block = nil -%}
+
+                    {%- for block in section.blocks -%}
+                        {%- if block.type == "customize-top-menu-item" and block.settings.mega_menu_trigger == link_handle -%}
+                            {%- assign matched_block = block -%}
+                            {%- break -%}
+                        {% endif %}
+                    {%- endfor -%}
+
                     <a
                             id="HeaderMenu-{{ link.handle }}"
                             href="{{ link.url }}"
-                            class="header__menu-item list-menu__item link link--text focus-inset"
+                            class="header__menu-item list-menu__item link link--text focus-inset
+
+
+    {% if matched_block.settings.enable_color_scheme and matched_block.settings.mega_menu_trigger == link_handle %}
+
+      {% case matched_block.settings.menu_apply_on %}
+        {% when 'desktop' %}
+          desktop-custom-style
+        {% when 'Mobile' %}
+          mobile-custom-style
+        {% when 'all' %}
+          universal-custom-style
+      {% endcase %}
+      {% if matched_block.settings.menu_style_on_desktop == 'outline' %}
+        outline-style
+      {% else %}
+        solid-style
+      {% endif %}
+    {% endif %}"
                             {% if link.current %}
                                 aria-current="page"
                             {% endif %}
+                            {% if matched_block.settings.open_link_new_tab %}
+                                target="_blank"
+                            {% endif %}
                     >
-            <span
-              {%- if link.current %}
-                  class="header__active-menu-item"
-              {% endif %}
-            >
-              {{- link.title | escape -}}
-            </span>
+  <span
+    {%- if link.current -%}
+        class="header__active-menu-item"
+    {% endif %}
+  >
+    {{- link.title | escape -}}
+  </span>
                     </a>
+
+                    {%- if matched_block and matched_block.settings.enable_color_scheme -%}
+                        <style>
+                            #HeaderMenu-{{ link.handle }} {
+                                color: {{ matched_block.settings.menu_item_color_scheme }};
+                                background-color: {{ matched_block.settings.menu_item_background-color }};
+                            }
+                        </style>
+                    {% endif %}
+
+                    <div
+                            id="MegaMenu-Content-{{ forloop.index }}"
+                            class="mega-menu__content color-{{ section.settings.menu_color_scheme }} gradient motion-reduce global-settings-popup"
+                            tabindex="-1"
+                    >
+                        <div class="custom">
+                            <div class="collection-list">
+                                {% render 'mega-menu-custom-content', link: link %}
+                            </div>
+                        </div>
+
+                    </div>
                 {%- endif -%}
             </li>
         {%- endfor -%}
