--- a/sections/cstm-header.liquid
+++ b/sections/cstm-header.liquid
@@ -89,7 +89,6 @@
     }
 
     .section-header {
-    position: sticky; /* This is for fixing a Safari z-index issue. PR #2147 */
     margin-bottom: {{ section.settings.margin_bottom | times: 0.75 | round: 0 }}px;
     }
 
@@ -220,37 +219,13 @@
     {%- endif -%}
 
     <div class="header__icons{% if section.settings.enable_country_selector or section.settings.enable_language_selector %} header__icons--localization header-localization{% endif %}">
-        <div class="desktop-localization-wrapper">
-            {%- if section.settings.enable_country_selector and localization.available_countries.size > 1 -%}
-                <localization-form class="small-hide medium-hide" data-prevent-hide>
-                    {%- form 'localization', id: 'HeaderCountryForm', class: 'localization-form' -%}
-                        <div>
-                            <h2 class="visually-hidden"
-                                id="HeaderCountryLabel">{{ 'localization.country_label' | t }}</h2>
-                            {%- render 'country-localization', localPosition: 'HeaderCountry' -%}
-                        </div>
-                    {%- endform -%}
-                </localization-form>
-            {% endif %}
 
-            {%- if section.settings.enable_language_selector and localization.available_languages.size > 1 -%}
-                <localization-form class="small-hide medium-hide" data-prevent-hide>
-                    {%- form 'localization', id: 'HeaderLanguageForm', class: 'localization-form' -%}
-                        <div>
-                            <h2 class="visually-hidden"
-                                id="HeaderLanguageLabel">{{ 'localization.language_label' | t }}</h2>
-                            {%- render 'language-localization', localPosition: 'HeaderLanguage' -%}
-                        </div>
-                    {%- endform -%}
-                </localization-form>
-            {%- endif -%}
-        </div>
-        {% render 'header-search', input_id: 'Search-In-Modal' %}
+        {% render 'cstm-header-search', input_id: 'Search-In-Modal' %}
 
         {%- if shop.customer_accounts_enabled -%}
             <a
                     href="{%- if customer -%}{{ routes.account_url }}{%- else -%}{{ routes.account_login_url }}{%- endif -%}"
-                    class="header__icon header__icon--account link focus-inset{% if section.settings.menu != blank %} small-hide{% endif %}"
+                    class="header__icon header__icon--account link focus-inset{% if section.settings.menu != blank %} {% endif %}"
                     rel="nofollow"
             >
                 {%- if section.settings.enable_customer_avatar -%}
@@ -258,11 +233,11 @@
                         {%- if customer and customer.has_avatar? -%}
                             {{ customer | avatar }}
                         {%- else -%}
-                            <span class="svg-wrapper">{{ 'icon-account.svg' | inline_asset_content }}</span>
+                            <span class="svg-wrapper">{{ 'account.svg' | inline_asset_content }}</span>
                         {%- endif -%}
                     </account-icon>
                 {%- else -%}
-                    <span class="svg-wrapper">{{ 'icon-account.svg' | inline_asset_content }}</span>
+                    <span class="svg-wrapper">{{ 'account.svg' | inline_asset_content }}</span>
                 {%- endif -%}
                 <span class="visually-hidden">
             {%- liquid
@@ -285,7 +260,7 @@
 
         <a href="{{ routes.cart_url }}" class="header__icon header__icon--cart link focus-inset" id="cart-icon-bubble">
             {% if cart == empty %}
-                <span class="svg-wrapper">{{ 'icon-cart-empty.svg' | inline_asset_content }}</span>
+                <span class="svg-wrapper">{{ 'cart-empty.svg' | inline_asset_content }}</span>
             {% else %}
                 <span class="svg-wrapper">{{ 'icon-cart.svg' | inline_asset_content }}</span>
             {% endif %}
@@ -304,7 +279,7 @@
 </{{ header_tag }}>
 
 {%- if settings.cart_type == "notification" -%}
-    {%- render 'cart-notification', color_scheme: section.settings.color_scheme, desktop_menu_type: section.settings.menu_type_desktop -%}
+    {%- render 'cstm-cart-notification', color_scheme: section.settings.color_scheme, desktop_menu_type: section.settings.menu_type_desktop -%}
 {%- endif -%}
 
 {% javascript %}
