--- a/snippets/cstm-header-search.liquid
+++ b/snippets/cstm-header-search.liquid
@@ -1,5 +1,5 @@
 {% comment %}
-  Renders a header search modal. Should be used with 'header.liquid'
+  Renders a header search modal. Should be used with 'cst-header.liquid'
 
   Accepts:
   - input_id: {String} Id for the search input element (required)
