--- a/assets/base.css
+++ b/assets/base.css
@@ -94,17 +94,27 @@ body:has(.section-header .drawer-menu) .announcement-bar-section .page-width {
   padding: 0;
   margin: 0 auto;
 }
-
+.utility-bar__grid.page-width .top-links {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+}
+.desktop-localization-wrapper .country-disclosure {
+  border-right: 2px solid;
+}
 .utility-bar__grid.page-width {
   padding-left: 3rem;
   padding-right: 3rem;
 }
 
-@media screen and (min-width: 750px) {
+@media screen and (min-width: 768px) {
   .page-width {
     padding: 0 5rem;
   }
-
+  .utility-bar__grid {
+    display: flex;
+    justify-content: space-between;
+  }
   .header.page-width,
   .utility-bar__grid.page-width {
     padding-left: 3.2rem;
@@ -150,7 +160,7 @@ body:has(.section-header .drawer-menu) .announcement-bar-section .page-width {
   margin-top: var(--spacing-sections-mobile);
 }
 
-@media screen and (min-width: 750px) {
+@media screen and (min-width: 768px) {
   .section + .section {
     margin-top: var(--spacing-sections-desktop);
   }
@@ -160,7 +170,7 @@ body:has(.section-header .drawer-menu) .announcement-bar-section .page-width {
   margin-top: 5rem;
 }
 
-@media screen and (min-width: 750px) {
+@media screen and (min-width: 768px) {
   .element-margin {
     margin-top: calc(5rem + var(--page-width-margin));
   }
@@ -277,7 +287,7 @@ h5,
   line-height: calc(1 + 0.3 / max(1, var(--font-heading-scale)));
 }
 
-@media only screen and (min-width: 750px) {
+@media only screen and (min-width: 768px) {
   .hxl {
     font-size: calc(var(--font-heading-scale) * 6.2rem);
   }
@@ -287,7 +297,7 @@ h5,
   font-size: calc(var(--font-heading-scale) * 4rem);
 }
 
-@media only screen and (min-width: 750px) {
+@media only screen and (min-width: 768px) {
   .h0 {
     font-size: calc(var(--font-heading-scale) * 5.2rem);
   }
@@ -298,7 +308,7 @@ h1,
   font-size: calc(var(--font-heading-scale) * 3rem);
 }
 
-@media only screen and (min-width: 750px) {
+@media only screen and (min-width: 768px) {
   h1,
   .h1 {
     font-size: calc(var(--font-heading-scale) * 4rem);
@@ -310,7 +320,7 @@ h2,
   font-size: calc(var(--font-heading-scale) * 2rem);
 }
 
-@media only screen and (min-width: 750px) {
+@media only screen and (min-width: 768px) {
   h2,
   .h2 {
     font-size: calc(var(--font-heading-scale) * 2.4rem);
@@ -322,7 +332,7 @@ h3,
   font-size: calc(var(--font-heading-scale) * 1.7rem);
 }
 
-@media only screen and (min-width: 750px) {
+@media only screen and (min-width: 768px) {
   h3,
   .h3 {
     font-size: calc(var(--font-heading-scale) * 1.8rem);
@@ -341,7 +351,7 @@ h5,
   font-size: calc(var(--font-heading-scale) * 1.2rem);
 }
 
-@media only screen and (min-width: 750px) {
+@media only screen and (min-width: 768px) {
   h5,
   .h5 {
     font-size: calc(var(--font-heading-scale) * 1.3rem);
@@ -362,7 +372,7 @@ blockquote {
   padding-left: 1rem;
 }
 
-@media screen and (min-width: 750px) {
+@media screen and (min-width: 768px) {
   blockquote {
     padding-left: 1.5rem;
   }
@@ -374,7 +384,7 @@ blockquote {
   line-height: calc(1 + 0.7 / var(--font-body-scale));
 }
 
-@media screen and (min-width: 750px) {
+@media screen and (min-width: 768px) {
   .caption {
     font-size: 1.2rem;
   }
@@ -427,13 +437,13 @@ table:not([class]) th {
   border: 0.1rem solid rgba(var(--color-foreground), 0.2);
 }
 
-@media screen and (max-width: 749px) {
+@media screen and (max-width: 768px) {
   .small-hide {
     display: none !important;
   }
 }
 
-@media screen and (min-width: 750px) and (max-width: 989px) {
+@media screen and (min-width: 768px) and (max-width: 989px) {
   .medium-hide {
     display: none !important;
   }
@@ -539,7 +549,7 @@ hr {
   margin: 5rem 0;
 }
 
-@media screen and (min-width: 750px) {
+@media screen and (min-width: 768px) {
   hr {
     margin: 7rem 0;
   }
@@ -583,7 +593,7 @@ details > * {
   --duration-medium: 300ms;
   --duration-long: 500ms;
   --duration-extra-long: 600ms;
-  --duration-extra-longer: 750ms;
+  --duration-extra-longer: 768ms;
   --duration-extended: 3s;
   --ease-out-slow: cubic-bezier(0, 0, 0.3, 1);
   --animation-slide-in: slideIn var(--duration-extra-long) var(--ease-out-slow) forwards;
@@ -638,8 +648,8 @@ h3 .icon-arrow,
   display: inline-flex;
   justify-content: center;
   align-items: center;
-  width: 20px;
-  height: 20px;
+  width: 16px;
+  height: 16px;
 }
 
 .svg-wrapper > svg {
@@ -690,7 +700,7 @@ summary::-webkit-details-marker {
   z-index: 100;
 }
 
-@media screen and (min-width: 750px) {
+@media screen and (min-width: 768px) {
   .disclosure-has-popup[open] > summary + * {
     z-index: 4;
   }
@@ -803,7 +813,7 @@ summary::-webkit-details-marker {
   padding-right: 1.5rem;
 }
 
-@media screen and (min-width: 750px) {
+@media screen and (min-width: 768px) {
   .title-wrapper--self-padded-mobile {
     padding-left: 0;
     padding-right: 0;
@@ -886,7 +896,7 @@ summary::-webkit-details-marker {
   row-gap: var(--grid-mobile-vertical-spacing);
 }
 
-@media screen and (min-width: 750px) {
+@media screen and (min-width: 768px) {
   .grid {
     column-gap: var(--grid-desktop-horizontal-spacing);
     row-gap: var(--grid-desktop-vertical-spacing);
@@ -904,7 +914,7 @@ summary::-webkit-details-marker {
   flex-shrink: 0;
 }
 
-@media screen and (min-width: 750px) {
+@media screen and (min-width: 768px) {
   .grid__item {
     width: calc(25% - var(--grid-desktop-horizontal-spacing) * 3 / 4);
     max-width: calc(50% - var(--grid-desktop-horizontal-spacing) / 2);
@@ -916,7 +926,7 @@ summary::-webkit-details-marker {
   row-gap: 0;
 }
 
-@media screen and (max-width: 749px) {
+@media screen and (max-width: 768px) {
   .grid__item.slider__slide--full-width {
     width: 100%;
     max-width: none;
@@ -932,7 +942,7 @@ summary::-webkit-details-marker {
   width: calc(33.33% - var(--grid-mobile-horizontal-spacing) * 2 / 3);
 }
 
-@media screen and (min-width: 750px) {
+@media screen and (min-width: 768px) {
   .grid--3-col .grid__item {
     width: calc(33.33% - var(--grid-desktop-horizontal-spacing) * 2 / 3);
   }
@@ -942,7 +952,7 @@ summary::-webkit-details-marker {
   width: calc(50% - var(--grid-mobile-horizontal-spacing) / 2);
 }
 
-@media screen and (min-width: 750px) {
+@media screen and (min-width: 768px) {
   .grid--2-col .grid__item {
     width: calc(50% - var(--grid-desktop-horizontal-spacing) / 2);
   }
@@ -1037,7 +1047,7 @@ summary::-webkit-details-marker {
   }
 }
 
-@media screen and (max-width: 749px) {
+@media screen and (max-width: 768px) {
   .grid--peek.slider--mobile {
     margin: 0;
     width: 100%;
@@ -1076,7 +1086,7 @@ summary::-webkit-details-marker {
   }
 }
 
-@media screen and (min-width: 750px) and (max-width: 989px) {
+@media screen and (min-width: 768px) and (max-width: 989px) {
   .slider--tablet.grid--peek .grid__item {
     width: calc(25% - var(--grid-desktop-horizontal-spacing) - 3rem);
   }
@@ -1224,7 +1234,8 @@ button.shopify-payment-button__button--unbranded {
   transition: box-shadow var(--duration-short) ease;
   -webkit-appearance: none;
   appearance: none;
-  background-color: rgba(var(--color-button), var(--alpha-button-background));
+  /*background-color: rgba(var(--color-button), var(--alpha-button-background));*/
+  background: #ff3200;
 }
 
 .button:before,
@@ -1255,8 +1266,8 @@ button.shopify-payment-button__button--unbranded {
   left: var(--buttons-border-width);
   z-index: 1;
   border-radius: var(--buttons-radius);
-  box-shadow: 0 0 0 calc(var(--buttons-border-width) + var(--border-offset))
-      rgba(var(--color-button-text), var(--border-opacity)),
+  /*box-shadow: 0 0 0 calc(var(--buttons-border-width) + var(--border-offset))*/
+      /*rgba(var(--color-button-text), var(--border-opacity)),*/
     0 0 0 var(--buttons-border-width) rgba(var(--color-button), var(--alpha-button-background));
   transition: box-shadow var(--duration-short) ease;
 }
@@ -1266,9 +1277,9 @@ button.shopify-payment-button__button--unbranded {
 .customer button:hover::after,
 .shopify-payment-button__button--unbranded:hover::after {
   --border-offset: 1.3px;
-  box-shadow: 0 0 0 calc(var(--buttons-border-width) + var(--border-offset))
-      rgba(var(--color-button-text), var(--border-opacity)),
-    0 0 0 calc(var(--buttons-border-width) + 1px) rgba(var(--color-button), var(--alpha-button-background));
+  /*box-shadow: 0 0 0 calc(var(--buttons-border-width) + var(--border-offset))*/
+      /*rgba(var(--color-button-text), var(--border-opacity)),*/
+    /*0 0 0 calc(var(--buttons-border-width) + 1px) rgba(var(--color-button), var(--alpha-button-background));*/
 }
 
 .button--secondary:after {
@@ -2092,6 +2103,8 @@ input[type='checkbox'] {
 /* utility-bar */
 .utility-bar {
   height: 100%;
+  z-index: 6;
+  position: relative;
 }
 
 .utility-bar--bottom-border {
@@ -2105,15 +2118,12 @@ input[type='checkbox'] {
 }
 
 .utility-bar__grid {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-areas: 'announcements';
+  padding-block: 17px;
 }
 
 .utility-bar__grid .list-social {
   justify-content: flex-start;
   align-content: center;
-  margin-left: -1.2rem;
   grid-area: social-icons;
 }
 
@@ -2124,7 +2134,7 @@ input[type='checkbox'] {
 }
 
 .utility-bar .list-social__item .icon {
-  scale: 0.9;
+  scale: 1;
 }
 
 @media screen and (min-width: 990px) {
@@ -2141,14 +2151,12 @@ input[type='checkbox'] {
   .announcement-bar.announcement-bar--one-announcement,
   .announcement-bar--one-announcement .announcement-bar__link {
     width: fit-content;
-    margin: auto;
   }
 }
 
 .announcement-bar,
 .announcement-bar__announcement {
   color: rgb(var(--color-foreground));
-  width: 100%;
   height: 100%;
   display: flex;
   justify-content: center;
@@ -2246,10 +2254,8 @@ input[type='checkbox'] {
 
 .announcement-bar__message {
   text-align: center;
-  padding: 1rem 0;
   margin: 0;
   letter-spacing: 0.1rem;
-  min-height: 3.8rem;
 }
 
 .announcement-bar-slider--fade-in-next .announcement-bar__message,
@@ -2310,7 +2316,7 @@ input[type='checkbox'] {
 }
 
 /* section-header */
-.section-header.shopify-section-group-header-group {
+.section-header.shopify-section-group-cstm-header-group {
   z-index: 3;
 }
 
@@ -2331,11 +2337,11 @@ input[type='checkbox'] {
   transition: top 0.15s ease-out;
 }
 
-.shopify-section-group-header-group {
+.shopify-section-group-cstmheader-group {
   z-index: 4;
 }
 
-.section-header ~ .shopify-section-group-header-group {
+.section-header ~ .shopify-section-group-cstm-header-group {
   z-index: initial;
 }
 
@@ -2351,13 +2357,12 @@ input[type='checkbox'] {
 }
 
 .header {
-  display: grid;
-  grid-template-areas: 'left-icons heading icons';
-  grid-template-columns: 1fr 2fr 1fr;
+  display: flex;
+  justify-content: space-between;
   align-items: center;
 }
 
-@media screen and (max-width: 749px) {
+@media screen and (max-width: 768px) {
   .header--has-app {
     grid-template-columns: auto 1fr auto;
   }
@@ -2436,7 +2441,6 @@ input[type='checkbox'] {
 
 .header__heading-link {
   display: inline-block;
-  padding: 0.75rem;
   text-decoration: none;
   word-break: break-word;
 }
@@ -2507,7 +2511,7 @@ input[type='checkbox'] {
   display: flex;
   grid-area: icons;
   justify-self: end;
-  padding-right: 0.8rem;
+  gap: 8px
 }
 
 .header__icons .shopify-app-block {
@@ -2532,8 +2536,8 @@ input[type='checkbox'] {
 }
 
 .header__icon .svg-wrapper {
-  width: 44px;
-  height: 44px;
+  width: 100%;
+  height: 100%;
 }
 
 .header__icon::after {
@@ -2554,14 +2558,13 @@ input[type='checkbox'] {
 
 .header__icon,
 .header__icon--cart .icon {
-  height: 4.4rem;
-  width: 4.4rem;
+  height: 2.5rem;
+  width: 2.5rem;
   padding: 0;
 }
 
 .header__icon--cart {
   position: relative;
-  margin-right: -1.2rem;
 }
 
 .header__icon--menu[aria-expanded='true']::before {
@@ -2692,7 +2695,7 @@ details[open] .modal-overlay::after {
   right: 0.3rem;
 }
 
-@media screen and (min-width: 750px) {
+@media screen and (min-width: 768px) {
   .search-modal__close-button {
     right: 1rem;
   }
@@ -2904,7 +2907,7 @@ details-disclosure > details {
   overflow: hidden;
 }
 
-@media screen and (min-width: 750px) {
+@media screen and (min-width: 768px) {
   .overflow-hidden-mobile {
     overflow: auto;
   }
@@ -2986,7 +2989,7 @@ details-disclosure > details {
   border-radius: 0;
 }
 
-@media screen and (max-width: 749px) {
+@media screen and (max-width: 768px) {
   .content-container--full-width-mobile {
     border-left: none;
     border-right: none;
@@ -3057,7 +3060,7 @@ details-disclosure > details {
     padding-bottom: var(--grid-mobile-vertical-spacing);
   }
 
-  @media screen and (min-width: 750px) {
+  @media screen and (min-width: 768px) {
     .grid {
       margin-left: calc(-1 * var(--grid-desktop-horizontal-spacing));
     }
@@ -3073,7 +3076,7 @@ details-disclosure > details {
     padding-bottom: 0;
   }
 
-  @media screen and (min-width: 749px) {
+  @media screen and (min-width: 768px) {
     .grid--peek .grid__item {
       padding-left: var(--grid-mobile-horizontal-spacing);
     }
@@ -3083,7 +3086,7 @@ details-disclosure > details {
     padding-bottom: var(--grid-mobile-vertical-spacing);
   }
 
-  @media screen and (min-width: 750px) {
+  @media screen and (min-width: 768px) {
     .product-grid .grid__item {
       padding-bottom: var(--grid-desktop-vertical-spacing);
     }
@@ -3143,7 +3146,7 @@ details-disclosure > details {
   table-layout: fixed;
 }
 
-@media screen and (min-width: 750px) {
+@media screen and (min-width: 768px) {
   .rte table td {
     padding-left: 1.2rem;
     padding-right: 1.2rem;
