--- a/assets/component-localization-form.css
+++ b/assets/component-localization-form.css
@@ -19,7 +19,7 @@
   flex-grow: 1;
 }
 
-@media screen and (min-width: 750px) {
+@media screen and (min-width: 768px) {
   .localization-form {
     padding: 1rem 2rem 1rem 0;
   }
@@ -286,7 +286,7 @@
   }
 }
 
-@media screen and (min-width: 750px) {
+@media screen and (min-width: 768px) {
   .country-filter--no-padding {
     padding: 0;
   }
@@ -349,6 +349,7 @@
   height: auto;
   min-height: initial;
   background: transparent;
+  line-height: 14px;
 }
 
 .header-localization .disclosure .localization-form__select:hover {
@@ -371,6 +372,8 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-end;
+  line-height: 14px;
+  font-size: 14px;
 }
 
 .desktop-localization-wrapper .localization-selector + .disclosure__list-wrapper {
@@ -388,7 +391,6 @@
 .js .header-localization:not(.menu-drawer__localization) .localization-form__select {
   padding: 0 2.7rem 0 1.2rem;
   width: max-content;
-  height: 3.8rem;
 }
 
 .header-localization:not(.menu-drawer__localization) .localization-form:only-child .localization-form__select {
