--- a/sections/cstm-announcement-bar.liquid
+++ b/sections/cstm-announcement-bar.liquid
@@ -1,12 +1,11 @@
 {{ 'component-slideshow.css' | asset_url | stylesheet_tag }}
 {{ 'component-slider.css' | asset_url | stylesheet_tag }}
-<h1>Welcome back</h1>
 {%- liquid
   assign social_icons = true
   if settings.social_facebook_link == blank and settings.social_instagram_link == blank and settings.social_youtube_link == blank and settings.social_tiktok_link == blank and settings.social_twitter_link == blank and settings.social_pinterest_link == blank and settings.social_snapchat_link == blank and settings.social_tumblr_link == blank and settings.social_vimeo_link == blank
     assign social_icons = false
   endif
-  if section.settings.enable_country_selector or section.settings.enable_language_selector
+  if section.settings.enable_country_selectors or section.settings.enable_language_selector
     assign language_country_selector = true
   endif
   if section.blocks.size > 0
@@ -19,12 +18,10 @@
 {% endif %}
 
 <div
-  class="utility-bar color-{{ section.settings.color_scheme }} gradient{% if section.settings.show_line_separator and section.blocks.size > 0 %} utility-bar--bottom-border{% elsif section.settings.show_line_separator and section.settings.show_social and social_icons%} utility-bar--bottom-border-social-only{% endif %}{% if section.settings.enable_country_selector or section.settings.enable_language_selector %} header-localization{% endif %}"
+  class="utility-bar color-{{ section.settings.color_scheme }} gradient{% if section.settings.show_line_separator and section.blocks.size > 0 %} utility-bar--bottom-border{% elsif section.settings.show_line_separator and section.settings.show_social and social_icons%} utility-bar--bottom-border-social-only{% endif %}{% if section.settings.enable_country_selectors or section.settings.enable_language_selector %} header-localization{% endif %}"
 >
   <div class="page-width utility-bar__grid{% if announcement_bar and language_country_selector or section.settings.show_social and social_icons %} utility-bar__grid--3-col{% elsif language_country_selector or section.settings.show_social and social_icons %} utility-bar__grid--2-col{% endif %}">
-    {%- if section.settings.show_social and social_icons -%}
-      {%- render 'social-icons' -%}
-    {%- endif -%}
+
     {%- if section.blocks.size == 1 -%}
       <div
         class="announcement-bar{% if section.settings.show_social %} announcement-bar--one-announcement{% endif %}"
@@ -136,30 +133,37 @@
         </style>
       {%- endif -%}
     {%- endif -%}
-    <div class="localization-wrapper">
-      {%- if section.settings.enable_country_selector and localization.available_countries.size > 1 -%}
-        <localization-form class="small-hide medium-hide">
-          {%- form 'localization', id: 'AnnouncementCountryForm', class: 'localization-form' -%}
-            <div>
-              <h2 class="visually-hidden" id="AnnouncementCountryLabel">{{ 'localization.country_label' | t }}</h2>
-              {%- render 'country-localization', localPosition: 'AnnouncementCountry' -%}
-            </div>
-          {%- endform -%}
-        </localization-form>
-      {% endif %}
+<div class="top-links">
+  <div class="desktop-localization-wrapper">
+              {%- if section.settings.enable_country_selectors and localization.available_countries.size > 1 -%}
+                  <localization-form class="small-hide" data-prevent-hide>
+                      {%- form 'localization', id: 'HeaderCountryForm', class: 'localization-form' -%}
+                          <div>
+                              <h2 class="visually-hidden"
+                                  id="HeaderCountryLabel">{{ 'localization.country_label' | t }}</h2>
+                              {%- render 'cstm-country-localization', localPosition: 'HeaderCountry' -%}
+                          </div>
+                      {%- endform -%}
+                  </localization-form>
+              {% endif %}
 
-      {%- if section.settings.enable_language_selector and localization.available_languages.size > 1 -%}
-        <localization-form class="small-hide medium-hide">
-          {%- form 'localization', id: 'AnnouncementLanguageForm', class: 'localization-form' -%}
-            <div>
-              <h2 class="visually-hidden" id="AnnouncementLanguageLabel">{{ 'localization.language_label' | t }}</h2>
-              {%- render 'language-localization', localPosition: 'AnnouncementLanguage' -%}
-            </div>
-          {%- endform -%}
-        </localization-form>
-      {%- endif -%}
-    </div>
-  </div>
+              {%- if section.settings.enable_language_selector and localization.available_languages.size > 1 -%}
+                  <localization-form class="small-hide" data-prevent-hide>
+                      {%- form 'localization', id: 'HeaderLanguageForm', class: 'localization-form' -%}
+                          <div>
+                              <h2 class="visually-hidden"
+                                  id="HeaderLanguageLabel">{{ 'localization.language_label' | t }}</h2>
+                              {%- render 'cstm-language-localization', localPosition: 'HeaderLanguage' -%}
+                          </div>
+                      {%- endform -%}
+                  </localization-form>
+              {%- endif -%}
+          </div>
+          {%- if section.settings.show_social and social_icons -%}
+                {%- render 'social-icons' -%}
+              {%- endif -%}
+              </div>
+          </div>
 </div>
 
 {% schema %}
@@ -192,7 +196,14 @@
       "id": "color_scheme",
       "label": "t:sections.all.colors.label",
       "default": "scheme-4"
-    },  
+    },
+    {
+          "type": "checkbox",
+          "id": "enable_country_selectors",
+          "default": true,
+          "label": "t:sections.header.settings.enable_country_selector.label",
+          "info": "t:sections.header.settings.enable_country_selector.info"
+        },
     {
       "type": "checkbox",
       "id": "show_line_separator",
