--- a/assets/cstm-component-card.css
+++ b/assets/cstm-component-card.css
@@ -129,7 +129,20 @@
   width: 100%;
   flex-grow: 1;
 }
-
+.card-wrapper .collection__content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  text-align: center;
+}
+.collection__content .collection_name {
+  font-size: 4rem;
+  font-weight: 800;
+  color: #ffffff;
+  text-transform: uppercase;
+}
 .card__content--auto-margins {
   grid-template-rows: minmax(0, auto) max-content minmax(0, auto);
 }
