--- a/sections/woodstock-choice.liquid
+++ b/sections/woodstock-choice.liquid
@@ -98,7 +98,7 @@
                       style="--animation-order: {{ forloop.index }};"
                     {% endif %}
                   >
-                    {% render 'cst-card-product',
+                    {% render 'cstm-card-product',
                       card_product: product,
                       media_aspect_ratio: section.settings.image_ratio,
                       image_shape: section.settings.image_shape,
@@ -130,7 +130,7 @@
                         endcase
                       %}
                       {%- assign placeholder_image = 'product-apparel-' | append: ridx -%}
-                      {% render 'cst-card-product',
+                      {% render 'cstm-card-product',
                         show_vendor: section.settings.show_vendor,
                         media_aspect_ratio: section.settings.image_ratio,
                         image_shape: section.settings.image_shape,
