--- a/snippets/cstm-card-collection.liquid
+++ b/snippets/cstm-card-collection.liquid
@@ -81,7 +81,7 @@
           {{ placeholder_image | placeholder_svg_tag: 'placeholder-svg' }}
         </div>
       {%- else -%}
-        <div class="card__content">
+        <div class="collection__content">
           <div class="card__information">
             <h3 class="card__heading">
               <a
@@ -97,11 +97,6 @@
                 {%- else -%}
                   {{ 'onboarding.collection_title' | t }}
                 {%- endif -%}
-                {%- if card_collection.description == blank -%}
-                  <span class="icon-wrap">
-                    {{- 'icon-arrow.svg' | inline_asset_content -}}
-                  </span>
-                {%- endif %}
               </a>
             </h3>
             {%- if card_collection.description != blank -%}
@@ -117,9 +112,9 @@
       {%- endif -%}
     </div>
     {%- if card_collection != blank and card_style == 'card' or card_collection.featured_image -%}
-      <div class="card__content">
+      <div class="collection__content">
         <div class="card__information">
-          <h3 class="card__heading">
+          <div class="collection_name">
             <a
               {% if card_collection == blank %}
                 role="link" aria-disabled="true"
@@ -133,13 +128,22 @@
               {%- else -%}
                 {{ 'onboarding.collection_title' | t }}
               {%- endif -%}
-              {%- if card_collection.featured_image or card_collection.description == blank -%}
-                <span class="icon-wrap">
-                  {{- 'icon-arrow.svg' | inline_asset_content -}}
-                </span>
-              {%- endif %}
             </a>
-          </h3>
+          </div>
+          <div>
+          <a
+                  {% if card_collection == blank %}
+                               role="link" aria-disabled="true"
+                             {% else %}
+                               href="{{ card_collection.url }}"
+                             {% endif %}
+                             class="button button--primary"
+                           >
+                             SHOP NOW
+                           </a>
+                           </div>
+
+
           {%- if card_collection.featured_image == null and card_collection.description != blank -%}
             <p class="card__caption">
               {{- card_collection.description | strip_html | truncatewords: 12 -}}
@@ -152,16 +156,13 @@
       </div>
     {%- endif -%}
     {%- if card_collection == blank -%}
-      <div class="card__content">
+      <div class="colllection__content">
         <div class="card__information">
-          <h3 class="card__heading card__heading--placeholder">
+          <div class="collection_name card__heading--placeholder">
             <a role="link" aria-disabled="true" class="full-unstyled-link">
               {{ 'onboarding.collection_title' | t }}
-              <span class="icon-wrap">
-                {{- 'icon-arrow.svg' | inline_asset_content -}}
-              </span>
             </a>
-          </h3>
+          </div>
         </div>
       </div>
     {%- endif -%}
