--- a/sections/cstm-featured-collection.liquid
+++ b/sections/cstm-featured-collection.liquid
@@ -1,4 +1,4 @@
-{{ 'cstmcomponent-card.css' | asset_url | stylesheet_tag }}
+{{ 'cstm-component-card.css' | asset_url | stylesheet_tag }}
 {{ 'component-price.css' | asset_url | stylesheet_tag }}
 
 {{ 'component-slider.css' | asset_url | stylesheet_tag }}
